
if(RDMNET_BUILD_EXAMPLES)
  add_subdirectory(controller)
endif()

if(RDMNET_BUILD_EXAMPLES OR RDMNET_BUILD_CONSOLE_EXAMPLES)
  if(WIN32)
    add_subdirectory(broker)
    add_subdirectory(device)
    add_subdirectory(discovery)
    add_subdirectory(llrp_manager)
  elseif(APPLE)
    add_subdirectory(llrp_manager)
  elseif(UNIX)
    add_subdirectory(broker)
    add_subdirectory(llrp_manager)
  endif()
endif()
