
if(RDMNET_BUILD_GUI_EXAMPLES)
  add_subdirectory(controller)
endif()

if(RDMNET_BUILD_CONSOLE_EXAMPLES)
  if(WIN32)
    add_subdirectory(fakeway)
  endif()
  if(WIN32 OR APPLE)
    add_subdirectory(broker)
    add_subdirectory(device)
    add_subdirectory(discovery)
    add_subdirectory(llrp_manager)
  elseif(UNIX)
    add_subdirectory(broker)
    add_subdirectory(device)
    add_subdirectory(llrp_manager)
  endif()
endif()
